style: fix missing margin on `search` section

--- a/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_default.css
+++ b/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_default.css
@@ -10,13 +10,16 @@
 /**
  * Sections
  */
-section {
+section,
+section#search {
     margin: 2rem 0 4rem 0;
 }
-section:first-of-type {
+section:first-of-type,
+section#first:first-of-type {
     margin-top: 0;
 }
-section:last-of-type {
+section:last-of-type,
+section#search:last-of-type {
     margin-bottom: 0;
 }
 
